--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
     <link rel="stylesheet" href="kendo2018.2.620/styles/kendo.mobile.all.min.css" >
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
     <script src="kendo2018.2.620/js/jquery.min.js"></script>
     <script src="kendo2018.2.620/js/kendo.all.min.js"></script>
